--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
       padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+    nav {
+      background-color: rgba(0, 0, 0, 0.6);
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 10;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      color: white;
+    }
+    nav .logo {
+      font-weight: bold;
+      font-size: 1.2em;
+    }
+    nav .menu a {
+      color: white;
+      margin-left: 15px;
+      text-decoration: none;
+    }
     header {
       background: url('https://upload.wikimedia.org/wikipedia/commons/e/e0/Serengeti_Landscape.jpg') no-repeat center center/cover;
       height: 100vh;
@@ -39,7 +60,7 @@
       margin-top: 10px;
     }
     section {
-      padding: 40px 20px;
+      padding: 60px 20px 40px;
       text-align: center;
     }
     .gallery {
@@ -73,7 +94,17 @@
   </style>
 </head>
 <body>
-  <header>
+  <nav>
+    <div class="logo">Datha Safari's</div>
+    <div class="menu">
+      <a href="#home">Home</a>
+      <a href="#services">Our Services</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact Us</a>
+    </div>
+  </nav>
+
+  <header id="home">
     <div class="lang-switch">
       <button onclick="setLanguage('en')">English</button>
       <button onclick="setLanguage('sw')">Kiswahili</button>
@@ -82,12 +113,12 @@
     <p id="hero-subtitle">Your gateway to unforgettable adventures in Tanzania</p>
   </header>
 
-  <section>
+  <section id="services">
     <h2 id="intro-title">Why Travel With Us?</h2>
     <p id="intro-desc">We offer tailored safaris, mountain treks, and beach escapes across Tanzania’s iconic destinations like Serengeti, Kilimanjaro, and Zanzibar.</p>
   </section>
 
-  <section>
+  <section id="gallery">
     <h2 id="gallery-title">Explore Our Destinations</h2>
     <div class="gallery">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Kilimanjaro_2006.jpg" alt="Mount Kilimanjaro">
@@ -97,8 +128,14 @@
     </div>
   </section>
 
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Phone: +255658259202</p>
+    <p>Email: Dathanshahp01@gmail.com</p>
+  </section>
+
   <footer>
-    <p>&copy; 2025 Datha Tourism Safari's | Phone: +255658259202 | Email: Dathanshahp01@gmail.com</p>
+    <p>&copy; 2025 Datha Tourism Safari's | All rights reserved</p>
   </footer>
 
   <script>
