--- a/index.html
+++ b/index.html
@@ -10,26 +10,34 @@
       padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    nav {
-      background-color: rgba(0, 0, 0, 0.6);
+    .menu-toggle {
       position: fixed;
-      top: 0;
-      width: 100%;
+      top: 15px;
+      left: 20px;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      cursor: pointer;
+      z-index: 11;
+    }
+    .dropdown-menu {
+      display: none;
+      position: fixed;
+      top: 50px;
+      left: 20px;
+      background-color: white;
+      box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+      padding: 15px;
+      border-radius: 8px;
       z-index: 10;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
-      color: white;
     }
-    nav .logo {
-      font-weight: bold;
-      font-size: 1.2em;
-    }
-    nav .menu a {
-      color: white;
-      margin-left: 15px;
+    .dropdown-menu a {
+      display: block;
+      margin-bottom: 10px;
       text-decoration: none;
+      color: #333;
+      font-weight: bold;
     }
     header {
       background: url('https://upload.wikimedia.org/wikipedia/commons/e/e0/Serengeti_Landscape.jpg') no-repeat center center/cover;
@@ -83,8 +91,8 @@
     }
     .lang-switch {
       position: absolute;
-      top: 20px;
-      right: 20px;
+      bottom: 30px;
+      right: 30px;
       z-index: 1;
     }
     .lang-switch button {
@@ -94,15 +102,13 @@
   </style>
 </head>
 <body>
-  <nav>
-    <div class="logo">Datha Safari's</div>
-    <div class="menu">
-      <a href="#home">Home</a>
-      <a href="#services">Our Services</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#contact">Contact Us</a>
-    </div>
-  </nav>
+  <button class="menu-toggle" onclick="toggleMenu()">☰ Menu</button>
+  <div class="dropdown-menu" id="dropdownMenu">
+    <a href="#home">Home</a>
+    <a href="#services">Our Services</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#contact">Contact Us</a>
+  </div>
 
   <header id="home">
     <div class="lang-switch">
@@ -139,6 +145,11 @@
   </footer>
 
   <script>
+    function toggleMenu() {
+      const menu = document.getElementById("dropdownMenu");
+      menu.style.display = menu.style.display === "block" ? "none" : "block";
+    }
+
     const translations = {
       en: {
         "hero-title": "Welcome to Datha Tourism Safari's",
