--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       font-weight: bold;
     }
     header {
-      background: url('https://upload.wikimedia.org/wikipedia/commons/e/e0/Serengeti_Landscape.jpg') no-repeat center center/cover;
+      background: url('hero.jpg') no-repeat center center/cover;
       height: 100vh;
       color: white;
       text-align: center;
@@ -70,18 +70,6 @@
     section {
       padding: 60px 20px 40px;
       text-align: center;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
-      padding: 0 20px;
-    }
-    .gallery img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
     }
     footer {
       background-color: #333;
@@ -124,16 +112,6 @@
     <p id="intro-desc">We offer tailored safaris, mountain treks, and beach escapes across Tanzania’s iconic destinations like Serengeti, Kilimanjaro, and Zanzibar.</p>
   </section>
 
-  <section id="gallery">
-    <h2 id="gallery-title">Explore Our Destinations</h2>
-    <div class="gallery">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Kilimanjaro_2006.jpg" alt="Mount Kilimanjaro">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Serengeti_Landscape.jpg" alt="Serengeti Safari">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/30/Zanzibar_Beach.jpg" alt="Zanzibar Beach">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/23/Ngorongoro_Crater.jpg" alt="Ngorongoro Crater">
-    </div>
-  </section>
-
   <section id="contact">
     <h2>Contact Us</h2>
     <p>Phone: +255658259202</p>
@@ -155,15 +133,13 @@
         "hero-title": "Welcome to Datha Tourism Safari's",
         "hero-subtitle": "Your gateway to unforgettable adventures in Tanzania",
         "intro-title": "Why Travel With Us?",
-        "intro-desc": "We offer tailored safaris, mountain treks, and beach escapes across Tanzania’s iconic destinations like Serengeti, Kilimanjaro, and Zanzibar.",
-        "gallery-title": "Explore Our Destinations"
+        "intro-desc": "We offer tailored safaris, mountain treks, and beach escapes across Tanzania’s iconic destinations like Serengeti, Kilimanjaro, and Zanzibar."
       },
       sw: {
         "hero-title": "Karibu Datha Tourism Safari's",
         "hero-subtitle": "Mlango wako wa safari zisizosahaulika Tanzania",
         "intro-title": "Kwa Nini Utusafiri Nasi?",
-        "intro-desc": "Tunatoa safari maalum, kupanda milima, na mapumziko ya fukweni katika maeneo maarufu ya Tanzania kama Serengeti, Kilimanjaro na Zanzibar.",
-        "gallery-title": "Gundua Vivutio Vyetu"
+        "intro-desc": "Tunatoa safari maalum, kupanda milima, na mapumziko ya fukweni katika maeneo maarufu ya Tanzania kama Serengeti, Kilimanjaro na Zanzibar."
       }
     };
 
